--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 *.lo
 *.o
 *.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
 
 # Precompiled Headers
 *.gch
@@ -15,10 +21,16 @@
 *.so
 *.dylib
 *.dll
+*.so.*
 
 # Fortran module files
-*.mod
-*.smod
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
 
 # Compiled Static libraries
 *.lai
@@ -26,7 +38,16 @@
 *.a
 *.lib
 
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
 # Executables
 *.exe
 *.out
 *.app
+*.i*86
+*.x86_64
+*.hex
