--- a/cpp/cpp_05/ex02/Makefile
+++ b/cpp/cpp_05/ex02/Makefile
@@ -30,7 +30,7 @@ $(NAME):	$(OBJS)
 			@echo "$(GREEN)$(NAME) created$(RESET)"
 
 clean:
-			@$(RM) $(OBJS)
+			@$(RM) $(OBJS) *_shrubbery
 			@echo "$(RED)objects deleted$(RESET)"
 
 fclean:		clean
