--- a/cpp/cpp_06/ex01/Makefile
+++ b/cpp/cpp_06/ex01/Makefile
@@ -27,6 +27,7 @@ $(NAME):	$(OBJS)
 			@echo "$(GREEN)$(NAME) created$(RESET)"
 
 clean:
+			@$(RM) $(OBJS)
 			@echo "$(RED)objects deleted$(RESET)"
 
 fclean:		clean
