--- a/cpp/cpp_06/ex00/Makefile
+++ b/cpp/cpp_06/ex00/Makefile
@@ -26,6 +26,7 @@ $(NAME):	$(OBJS)
 			@echo "$(GREEN)$(NAME) created$(RESET)"
 
 clean:
+			@$(RM) $(OBJS)
 			@echo "$(RED)objects deleted$(RESET)"
 
 fclean:		clean
