initial conf makefile and docker compose

--- a/container/inception/srcs/.env
+++ b/container/inception/srcs/.env
@@ -1,8 +1,7 @@
-cat srcs/.env
 DOMAIN_NAME=
 # certificates
 CERTS_=./
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD= root
+MYSQL_USER= root
+MYSQL_PASSWORD= root
