--- a/container/inception/srcs/.env
+++ b/container/inception/srcs/.env
@@ -1,7 +1,8 @@
-DOMAIN_NAME=
+#test: eu sei, não é para subir em produção.
+DOMAIN_NAME=rgorki.42.fr
 # certificates
 CERTS_=./
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD= root
-MYSQL_USER= root
-MYSQL_PASSWORD= root
+MYSQL_ROOT_PASSWORD= root42
+MYSQL_USER= rgorki
+MYSQL_PASSWORD= root42
