--- a/container/inception/srcs/docker-compose.yml
+++ b/container/inception/srcs/docker-compose.yml
@@ -1,13 +1,21 @@
-version: '3.1'
+version: '3.9'
 services:
-  db:
-    image: mariadb:latest
+  mariadb:
+    build:
+      context: "./requirements/mariadb"
+      dockerfile: Dockerfile
+      args:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+    container_name: mariadb
+    env_file:
+      - .env
     volumes:
-      - db_data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-
+      - db_data:/home/rgorki/Projetos-C-Cpp/container/inception/srcs/requirements/mariadb/tools
+    expose:
+      - 3306
+    init: true
 volumes:
   db_data:
+
