--- a/container/inception/srcs/.env
+++ b/container/inception/srcs/.env
@@ -1,8 +1,19 @@
-#test: eu sei, não é para subir em produção.
+
 DOMAIN_NAME=rgorki.42.fr
-# certificates
+
 CERTS_=./
-# MYSQL SETUP
+
 MYSQL_ROOT_PASSWORD= root42
 MYSQL_USER= rgorki
 MYSQL_PASSWORD= root42
+DB_NAME=wordpress
+
+
+WP_USER=rgorki
+WP_PASSWORD=root42
+WP_TITLE=rgorki
+WP_EMAIL=rgorki@student.42.rio
+
+WP_ADMIN_USER=rgorki42
+WP_ADMIN_PASSWORD=root42
+WP_ADMIN_EMAIL=rgorki@student.42.rio
