--- a/container/inception/srcs/requirements/mariadb/Dockerfile
+++ b/container/inception/srcs/requirements/mariadb/Dockerfile
@@ -1,25 +1,17 @@
+# syntax=docker/dockerfile:1
+
 FROM debian:bullseye
 
-RUN apt update && apt upgrade -y
-RUN apt install -y mariadb-server
-RUN service mariadb restart
-WORKDIR /app
-COPY /conf/script.sh .
-RUN chmod +x script.sh
+RUN apt update && apt install -y --no-install-recommends \
+	mariadb-server \
+	&& apt clean \
+	&& rm -rf /var/lib/apt/lists/* \
+	&& chmod -R 755 /var/lib/mysql/
 
-ARG MYSQL_ROOT_PASSWORD
-ARG MYSQL_USER
-ARG MYSQL_PASSWORD
-ENV MYSQL_ROOT_PASSWORD ${MYSQL_ROOT_PASSWORD}
-ENV MYSQL_USER ${MYSQL_USER}
-ENV MYSQL_PASSWORD ${MYSQL_PASSWORD}
+RUN sed -i "s/127.0.0.1/0.0.0.0/g" etc/mysql/mariadb.conf.d/50-server.cnf
 
-EXPOSE 3306
+COPY ./tools/init_mariadb.sh .
 
+VOLUME [ "/var/lib/mysql" ]
 
-
-
-
-RUN  service mariadb restart && "./script.sh"
-
-CMD ["mysqld"]
+CMD ["./init_mariadb.sh"]
